tests/method.err.out
error: method.err.li 4,13: `Num.f` is already defined
    4 | fn (n: Num) f() {}
      |             ^
error: method.err.li 7,1: function `Num.undefined` is not defined
    7 | n.undefined()
      | ^^^^^^^^^^^^^
